# celine-training-materials

./: README.md  pyproject.toml
GreenLand/pagine/: amministrazione-trasparente.md  associazioni.md  cammino-di-vaia.md  chi-siamo.md  collaborazioni.md  comunita-energetica.md  consiglio-di-amministrazione.md  contatti.md  faq.md  formazione-outdoor.md  home.md  lavarone-green-land.md  per-i-soci.md  rto.md  welfare-di-comunita.md  wellfare-km0.md
src/celine/training_materials/cli/: main.py
