[project]
name = "celine-training-materials-cli"
version = "0.1.0"
description = "CLI utilities for CELINE training materials"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "celine-sdk>=1.4.1",
  "httpx>=0.27.0",
  "typer>=0.12.5",
]

[project.scripts]
celine-training-materials = "celine.training_materials.cli.main:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/celine/training_materials"]
sources = {"src" = ""}
